@@ -285,7 +285,9 @@ module StateMachine
       # state value actually changed
       def write(object, attribute, value)
         result = super
-        object.send("#{self.attribute}_will_change!") if attribute == :state && object.respond_to?("#{self.attribute}_will_change!")
+        if attribute == :state && object.respond_to?("#{attribute}_will_change!") && !object.send("#{attribute}_changed?")
+          object.send("#{attribute}_will_change!")
+        end
         result
       end
       
